fix the large amounts of whitespace on the index page, and tweak the size of the main landing thing so that it looks like you can scroll

--- a/css/index.styl
+++ b/css/index.styl
@@ -5,7 +5,7 @@ body
 
 .landing
 	background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%)
-	height: calc(100vh - 57px)
+	height: 75vh
 	overflow: hidden
 
 .landing>.container-fluid, .header-row, .landing-text
@@ -38,9 +38,8 @@ body
 	text-align: center
 
 .feature-marquee
-	width: 100vw
-	height: 20vh
-	padding-top: 8vh
+	width: 100%
+	padding: 2rem 0
 	overflow: hidden
 
 .mini-feature, .fine-print
@@ -54,8 +53,8 @@ body
 	opacity: 1
 
 #bottom-get-started
-	padding-top: 20vh
-	height: 70vh
+	padding-top: 5rem
+	padding-bottom: 10rem
 
 .landing-graphic
 	position: relative
@@ -123,7 +122,7 @@ body
 	color: white
 
 .feature
-	height: 40vh
+	height: 20rem
 	min-height: 250px
 
 .vertical-center
@@ -140,9 +139,6 @@ body
 
 .tar
 	text-align: right
-
-.vh100
-	height: 100vh
 
 @media only screen and (max-width: 768px)
 	.icon-holder
